--- a/web/themes/custom/citizen_dart/components/04-units/nodes/support-book/_support-book.scss
+++ b/web/themes/custom/citizen_dart/components/04-units/nodes/support-book/_support-book.scss
@@ -5,6 +5,13 @@
 @use '../../../00-base/base' as *;
 
 .node-support-book{
+  .layout--twocol-sideleft{
+    .layout__region--first{
+      @include onlyMobile{
+        order: 2;
+      }
+    }
+  }
   .block-system-breadcrumb-block{
     .breadcrumb{
       li{
